# ecrase

./: CMakeLists.txt  COPYING  README
CMakeModules/: Copyright.txt  README
data/entities/: vase
data/rooms/: init
data/scene/: disco.rme  etydef  genie.ety  init.rme  rmedef  vase.ety  vaseret.ety
data/scene/entities/: LOG
data/scene/rooms/: LOG
data/script/: init
src/: Entity.cpp  Entity.h  Room.cpp  Room.h  Scene.cpp  Scene.h  Script.cpp  Script.h  Video.cpp  Video.h  main.cpp
